final/styles/base.css
*,
*::before,
*::after {
    box-sizing: border-box;

    /* boundaries of every element */
    /* outline: 1px solid red; */

}

:root {
  --jungle-green: #2A8D6E;
  --light-jungle: #d6e7e2;
  --caribbean-turquoise: #84e3ea;
  --logo-color: #00318F;
  --guava-pink: #a31838;
  --dark-guava: #520d1d;
  --mango-orange: #FF9F1C;
  --charcoal: #1A1A1A;
  --cloud-white: #f3f3f3b7;
  --clear: #ffffff;
  --required: #f95f00;
  --required-done: #8bf13d;
  --light-charcoal: #b2b2b2;
  --nav-back: #000000D9;
  --home-header: #00000033;
  --radius:8px
}



h2 {
    color: var(--jungle-green);
    font-family: 'oswald', sans-serif;
    background-color: var(--light-jungle);
    padding: .5rem;
    text-align: center;
}

p {
    font-family: 'cabin', sans-serif;
    margin: 1rem;
    text-align: center;
}

body{
    background-color: var(--cloud-white);
}

footer  {
    background-color: var(--jungle-green);
    padding: 2rem;
    text-align: center;
    border-radius: var(--radius);
}

footer img {
    width: 30px;
    height: 40px;
    margin: 1rem;
}





/* HEADER */
header {
    position: relative;
    background-color: var(--charcoal);
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.home header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: .5rem 2rem;
    z-index: 100;
    background: var(--home-header); 
    backdrop-filter: blur(1px); 

}


/* hamburger navigation */
.hamburger {
  display: block;
  background: none;
  border: none;
  background-color: var(--clear);
  border-radius: var(--radius);
  color: var(--guava-pink);
  cursor: pointer;
}
.hamburger::before {
  content: "\2630";
  font-size: 2rem;
}
/* "\2630" it is called entity */
.hamburger.show::before {
  content: "\00D7";
  font-size: 2rem;
}

/* navigation */
.navigation {
  display: none;
  width: 100%;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: var(--nav-back);
  backdrop-filter: blur(8px);
  border-radius: var(--radius);
  z-index: 99;
}
.navigation ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.navigation li a {
    padding: 1rem;
    text-align: center;
    text-decoration: none;
    color: var(--clear);
    font-family: 'cabin', sans-serif;
    font-weight: 700;
    display: block;
    transition: background-color 0.4s ease, color 0.4s ease;
    border-radius: var(--radius);
}

 
.navigation li a:hover{ 
    background-color: var(--guava-pink);
    color: var(--clear);
    font-weight: 700;
    border-radius: var(--radius);
    text-decoration: none;
} 

.navigation.show{
    display: block;
}


.logo img{
    width: 200px;
    margin-top: .5rem;
    display: block;
}

/* WAYFINDING */
 .navigation a.active {
    text-decoration: underline;
    text-decoration-color: var(--cloud-white);
    text-decoration-thickness: 2px;
    text-underline-offset: 5px;

}

/* Hero image */
.hero {
    position: relative;
    min-height: 100vh;
    overflow: hidden;
}

.hero img {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    /* the animation of zooming */
    animation: zoomInOut 20s ease-in-out infinite;
    transform-origin: center;
}

@keyframes zoomInOut {
    0% {
        transform: scale(1);
    }
    50%{
        transform: scale(1.2);
    }
    100%{
        transform: scale(1);
    }
}

.hero-content {
    position: relative;
    z-index: 1;

    min-height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 80px;
}

.hero-content h1 {
    font-size: clamp(2.5rem, 8vw, 5rem);
    font-family: 'cinzel', sans-serif;
    color: var(--clear);
    text-align: center;
    text-shadow:
     2px -1px 0 var(--charcoal),
    -1px  2px 0 var(--charcoal),
     2px  1px 0 var(--guava-pink)
}

h1 {
    font-family: 'cinzel', sans-serif;
    text-align: center;
    padding: 1rem;
    text-shadow: 0 1px 2px var(--guava-pink);
}

     /* API */
#text-api {
    padding: 1rem;
}


#text-api .card {
    max-width: 350px;
    border: 2px solid var(--charcoal);
    border-radius: var(--radius);
    background-color: var(--clear);
    margin: 0 auto;
}

#text-api h2 {
    margin: 0;
    background-color: var(--cloud-white);
    color: var(--charcoal);
    border-radius: var(--radius);
}



#graphic {
    background-color: var(--mango-orange);
    border-radius: 50px;
    display: block;
    margin: .5rem auto;
    align-items: center;
    justify-content: center;
}


#description,
#temperature {
    margin: 0;
}

/* 3 cards-homepage with cards from trip page*/
.trips-cards,
#trips-colombia {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
  padding: 1rem;
  border: 1px solid var(--clear);
  background-color: var(--clear);
  border-radius: 9px;
  margin: 1rem;
  text-align: center;
  box-shadow: 0 4px 12px var(--charcoal);
}
.trip-card {
  background: white;
  padding: 1rem;
  border-radius: var(--radius);
  box-shadow: 0 4px 12px var(--nav-back);
  min-height: 350px;
}

.trip-card img {
  width: 100%;
  max-width: 300px;
  height: auto;
  object-fit: cover;
  border-radius: var(--radius);
}

.trip-card img:hover {
box-shadow: 0 0 10px var(--guava-pink);
}

.button,
.the-form input[type="submit"]  {
  text-decoration: none;
  background-color: var(--guava-pink);
  border-radius: 30px;
  padding: 1.5rem;
  color: var(--clear);
  font-weight: 700;
  font-size: 1.3rem;
  display: block;
  width: fit-content;
  margin: .5rem auto;
  font-family: 'cinzel', sans-serif ;
  /* transition to hover */
  transition: background-color 0.4s ease, color 0.4s ease;
  text-align: center;
  cursor: pointer;
}

.button:hover {
  background-color:var(--mango-orange);
  color: var(--charcoal);
}


/* contact us from home */
#contacting  {
    max-width: 500px;
    margin: 3rem auto;
    padding: 2rem;
    text-align: center;
    background-color: var(--light-jungle);
    border-radius: 12px;
    gap: 1.5rem;
}

#contacting p {
    margin: 0;
    font-size: 1.1rem;
    line-height: 1.6;
}

#tripDialog {
    max-width: 300px;
    border-radius: var(--radius);
    border: 1px solid var(--caribbean-turquoise);
    
 }
#tripDialog h2{
    background-color: var(--clear);
    color: var(--charcoal);
    font-family: 'cabin', sans-serif;
    margin: 0;
}
 ::backdrop {background-color: var(--home-header);
}

#closeDialog {
    height: 30px;
    border-radius: var(--radius);
    cursor: pointer;
}

.learn-more{
    background-color: var(--caribbean-turquoise);
    color: var(--charcoal);
    font-weight: 700;
    padding: .5rem;
    border-radius: var(--radius);
    font-family: 'cabin', sans-serif;
    cursor: pointer;
}

/* FORM */


.form-group{
    margin: .5rem 1rem .5rem 2rem;
    display: flex; 
    flex-direction: column;
    gap: .5rem;
}


.the-form {
  border: 2px solid var(--guava-pink);
  background-color: var(--cloud-white);
  border-radius: 12px;

  max-width: 470px;
  margin: 2rem auto;

}

.the-form div{
    font-family: 'cabin', Tahoma;
    padding-top: 1rem;
    color: var(--charcoal);
    font-weight: 700;
    font-size: .9rem;
}


/* Required but empty/invalid */
input:required:invalid {
  border-left-color: var(--required);
}

input:required:valid {
  border-left-color: var(--required-done);
}

/* Placeholders */
#fname,
#lname,
#org-title, 
#email, 
#phone, 
#organization, 
#description-form,
#trip {
    font-family: Arial, Helvetica, sans-serif;
    font-style: italic; 
    font-size: small;
    background-color: var(--clear);
    border-radius: 06px;
    padding: .75rem;
    width: 100%;
    max-width: 400px;
    transition: border 0.2s ease, box-shadow 0.2s ease;
}

input {
  border: 1px solid var(--light-charcoal);
  border-left: 4px solid transparent;
  padding: .5rem;
  outline: none;
}


.the-form h2{
    background-color: var(--clear);
    color: var(--logo-color);
    
}

#thanks {
    max-width: 400px;
    text-align: center;
    margin: 2rem auto;
    font-family: 'cabin', sans-serif;
    font-weight: 700;
    font-size: 18px;

}


.message-thanks {
    padding: 5rem 0;
    background-color: var(--light-jungle);
}

